docs: swagger for create message
